@@ -1,0 +1,2 @@
+<http://example.org/s> <http://example.org/p> <example:%20!%22#$%25&'()*+,-./0123456789:/%3C=%3E?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[%5C]%5E_%60abcdefghijklmnopqrstuvwxyz%7B%7C%7D~%7F> .
+<http://example.org/s> <http://example.org/p> <http://example.org/verschlüsselt✉😐/%20%21%22%23%24%25%26%27%28%29%2A%2B%2C-.%2F%30%31%32%33%34%35%36%37%38%39%3A%3B%3C%3D%3E%3F%40ABCDEFGHIJKLMNOPQRSTUVWXYZ%5B%5C%5D%5E_%60abcdefghijklmnopqrstuvwxyz%7B%7C%7D~%7F> .
