@@ -1,0 +1,3 @@
+<http://example.org/s> <http://example.org/p> <http://example.org/unreserved-AZ-09-._~> .
+<http://example.org/s> <http://example.org/p> <http://example.org/verschl%C3%BCsselt%20%E2%9C%89%20%F0%9F%98%90> .
+<http://example.org/s> <http://example.org/p> <http://example.org/%01%02%03%04%05%06%07%08%09%0A%0B%0C%0D%0E%0F%10%11%12%13%14%15%16%17%18%19%20!%22#$%25&'()*+,-./0123456789:;%3C=%3E?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[%5C]%5E_%60abcdefghijklmnopqrstuvwxyz%7B%7C%7D~%7F> .
