@@ -110,9 +110,9 @@ print_usage(const char* const name, const bool error)
     "  -B URI     Resolve URIs against the given base URI or path.\n"
     "  -C         Convert literals to canonical form.\n"
     "  -I SYNTAX  Input syntax nquads/ntriples/trig/turtle, or option\n"
-    "             generated/global/lax/relative/variables.\n"
+    "             decoded/generated/global/lax/relative/variables.\n"
     "  -O SYNTAX  Output syntax empty/nquads/ntriples/trig/turtle, or option\n"
-    "             ascii/contextual/expanded/lax/terse/verbatim.\n"
+    "             ascii/contextual/encoded/expanded/lax/terse/verbatim.\n"
     "  -R URI     Keep relative URIs within the given root URI.\n"
     "  -V         Display version information and exit.\n"
     "  -b BYTES   I/O block size.\n"
